--- a/config/rbac/finbackup_viewer_role.yaml
+++ b/config/rbac/finbackup_viewer_role.yaml
@@ -1,32 +1,23 @@
----
+# permissions for end users to view finbackups.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: fin
+    app.kubernetes.io/managed-by: kustomize
+  name: finbackup-viewer-role
 rules:
 - apiGroups:
   - fin.cybozu.io
   resources:
   - finbackups
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
-- apiGroups:
-  - fin.cybozu.io
-  resources:
-  - finbackups/finalizers
-  verbs:
-  - update
 - apiGroups:
   - fin.cybozu.io
   resources:
   - finbackups/status
   verbs:
   - get
-  - patch
-  - update
