add the get access right of PVC and PV
Signed-off-by: Shinya Hayashi <shinya-hayashi@cybozu.co.jp>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,6 +5,18 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - persistentvolumeclaims
+  verbs:
+  - get
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumes
+  verbs:
+  - get
+- apiGroups:
   - fin.cybozu.io
   resources:
   - finbackups
