add snapSize and snapID fields to FinBackupStatus
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/config/crd/bases/fin.cybozu.io_finbackups.yaml
+++ b/config/crd/bases/fin.cybozu.io_finbackups.yaml
@@ -170,6 +170,13 @@ spec:
                   target PVC'
                 format: date-time
                 type: string
+              snapID:
+                description: '''snapID'' specifies the unique identifier for the snapshot'
+                type: string
+              snapSize:
+                description: '''snapSize'' specifies the size of the snapshot'
+                format: int64
+                type: integer
             type: object
         required:
         - spec
