add FinRestore resource
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -42,3 +42,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - fin.cybozu.io
+  resources:
+  - finrestores
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - fin.cybozu.io
+  resources:
+  - finrestores/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - fin.cybozu.io
+  resources:
+  - finrestores/status
+  verbs:
+  - get
+  - patch
+  - update
