--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - fin_v1_finbackup.yaml
+- fin_v1_finrestore.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
