--- a/config/crd/bases/fin.cybozu.io_finbackups.yaml
+++ b/config/crd/bases/fin.cybozu.io_finbackups.yaml
@@ -153,7 +153,8 @@ spec:
                 type: string
               snapID:
                 description: '''snapID'' specifies the unique identifier for the snapshot'
-                type: string
+                format: int64
+                type: integer
               snapSize:
                 description: '''snapSize'' specifies the size of the snapshot'
                 format: int64
