golangci-lint: exclude errcheck on defer
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,6 +24,10 @@ linters:
     - unconvert
     - unparam
     - unused
+  exclusions:
+    rules:
+      - linters: ["errcheck"]
+        source: "^\\s*defer\\s+"
 formatters:
   enable:
     - gofmt
