set RBAC for controller to manage job, pvc and pv
Signed-off-by: Shinya Hayashi <shinya-hayashi@cybozu.co.jp>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,17 +5,33 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - ""
   resources:
   - persistentvolumeclaims
   verbs:
   - get
+  - list
+  - watch
 - apiGroups:
   - ""
   resources:
   - persistentvolumes
   verbs:
   - get
+  - list
+  - watch
 - apiGroups:
   - fin.cybozu.io
   resources:
