--- a/test/e2e/testdata/finbackup.yaml
+++ b/test/e2e/testdata/finbackup.yaml
@@ -1,8 +1,9 @@
 apiVersion: fin.cybozu.io/v1
 kind: FinBackup
 metadata:
-  name: finbackup-sample
+  name: finbackup-test
+  namespace: rook-ceph
 spec:
-  pvc: foo
-  pvcNamespace: fooNS
-  node: fooNode
+  pvc: test-pvc
+  pvcNamespace: test-ns
+  node: minikube-worker
