--- a/test/e2e/testdata/backup-target-pvc.yaml
+++ b/test/e2e/testdata/backup-target-pvc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: test-pvc
+  namespace: test-ns
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
   storageClassName: rook-ceph-block
