--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -128,6 +128,8 @@ image-build:
 setup-components:
 	$(MAKE) -C ../.. install
 	$(MAKE) -C ../.. deploy
+	$(KUBECTL) patch deploy -n $(NS) fin-controller-manager --type='json' -p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value":"--raw-img-expansion-unit-size=10485760"}]'
+
 
 .PHONY: do-test
 do-test: $(GINKGO) $(KUBECTL) $(MINIKUBE)
