--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -76,6 +76,8 @@ spec:
           value: controller:latest
         - name: MAX_PART_SIZE
           value: 30Mi
+        - name: RAW_IMAGE_CHUNK_SIZE
+          value: 4Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
