--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -3,9 +3,13 @@ on:
   pull_request:
     paths-ignore:
       - "**/*.md"
+      - "NOTICE"
+      - "LICENSE"
   push:
     paths-ignore:
       - "**/*.md"
+      - "NOTICE"
+      - "LICENSE"
     branches:
       - "main"
 
