test: Add first e2e test for FinRestore controller
Add the first e2e test for FinRestore controller and fix bugs
found in this test.

Major fixes are:
- Finbackup controller should set FinBackup.statsus.snapSize
  on the backup creation. It's necessary for the restore job
  to set the size of the restore PVC.
- FinRestore controller should set a envvar that means
  the backup target PVC's UID. It's necessary for the restore
  job to verify the restore target data is really correct.
- FiRestore's pvc and pvcNamespace fields should be optional.
- Add missing verbs for the FinRestore controller to create
  PVC and PV.
- Copy from the minimum necessary fields of the backup target PVC
  to the restore PVC.

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/config/crd/bases/fin.cybozu.io_finrestores.yaml
+++ b/config/crd/bases/fin.cybozu.io_finrestores.yaml
@@ -56,13 +56,13 @@ spec:
                 - message: backup is immutable
                   rule: self == oldSelf
               pvc:
-                description: '''pvc'' specifies restore target PVC'
+                description: '''pvc'' specifies restore target PVC''s name'
                 type: string
                 x-kubernetes-validations:
                 - message: pvc is immutable
                   rule: self == oldSelf
               pvcNamespace:
-                description: '''pvcNamespace'' specifies restore target Namespace'
+                description: '''pvcNamespace'' specifies restore target PVC''s namespace'
                 type: string
                 x-kubernetes-validations:
                 - message: pvcNamespace is immutable
