--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -10,8 +10,12 @@ rules:
   - persistentvolumeclaims
   - persistentvolumes
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - batch
