e2e-test: migrate from kubectl to client-go and controller-runtime client
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,6 +24,11 @@ linters:
     - unconvert
     - unparam
     - unused
+  exclusions:
+    rules:
+      - linters:
+          - lll
+        path: "test/e2e/util.go"
 formatters:
   enable:
     - gofmt
