--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,17 +4,20 @@
 resources:
 - bases/fin.cybozu.io_finbackups.yaml
 - bases/fin.cybozu.io_finrestores.yaml
+- bases/fin.cybozu.io_finbackupconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
+#- path: patches/webhook_in_finbackupconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_finbackups.yaml
 #- path: patches/cainjection_in_finrestores.yaml
+#- path: patches/cainjection_in_finbackupconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
