build locally with cache and load a saved tarball image to minikube
Instead of relying on minikube docker-env, we build the image locally
with cache, save it as a tarball, and load it into minikube.
This makes image loading much faster.

Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -18,10 +18,13 @@ TIMEOUT_SECS := 300
 
 export MINIKUBE_HOME
 
+IMG_TAR = controller.tar
+
 .PHONY: test
 test:
 	$(MAKE) launch-minikube
 	$(MAKE) image-build
+	$(MAKE) image-tar-load
 	$(MAKE) launch-rook-ceph
 	$(MAKE) setup-fin-volume
 	$(MAKE) setup-components
@@ -120,9 +123,14 @@ launch-rook-ceph: create-loop-dev $(KUBECTL) $(HELM)
 
 .PHONY: image-build
 image-build:
-	eval $$($(MINIKUBE) docker-env); \
 	$(MAKE) -C ../.. docker-build
-	$(MINIKUBE) ssh -- docker images
+
+.PHONY: image-tar-load
+image-tar-load:
+	$(MAKE) -C ../.. docker-save
+	$(MINIKUBE) image load ../../${IMG_TAR}
+	$(MINIKUBE) ssh -- docker images || true
+	rm ../../${IMG_TAR} || true
 
 .PHONY: setup-components
 setup-components:
