--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,37 +21,53 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-      - run: sudo apt-get update
-      - run: sudo apt-get purge -y apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
-      - run: sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
-      - run: sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup /usr/lib/jvm || true
-      - run: sudo apt-get purge -y $(dpkg-query -W | grep nginx | awk '{print $1}')
-      - run: sudo apt-get purge -y aria2 ansible azure-cli shellcheck rpm xorriso zsync firefox gfortran-9 google-chrome-stable google-cloud-sdk
-      - run: sudo apt-get purge -y imagemagick libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional mercurial apt-transport-https
-      - run: sudo apt-get purge -y mono-complete unixodbc-dev yarn chrpath libxft-dev libfreetype6-dev libfontconfig1 libfontconfig1-dev
-      - run: sudo apt-get purge -y snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion azure-cli
-      - run: sudo apt-get purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
-      - run: sudo apt-get autoremove -y >/dev/null 2>&1
-      - run: sudo apt-get autoclean -y >/dev/null 2>&1
-      - name: "KVM setup"
-        run: |-
-             VIRTUALIZATION_SUPPORT=$(grep -E -q 'vmx|svm' /proc/cpuinfo && echo yes || echo no)
-             echo ${VIRTUALIZATION_SUPPORT}
-             if [ "${VIRTUALIZATION_SUPPORT}" != "yes" ]; then
-               echo "CPU does not support the virtualization feature."
-               exit 1
-             fi
-             sudo apt-get install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
-             kvm-ok
-             sudo adduser `id -un` libvirt
-             sudo adduser `id -un` kvm
-             virsh list --all
-             sudo ls -la /var/run/libvirt/libvirt-sock
-             sudo chmod 777 /var/run/libvirt/libvirt-sock
-             sudo ls -la /var/run/libvirt/libvirt-sock
-             ls -l /dev/kvm
-             sudo rmmod kvm_amd
-             sudo rmmod kvm
-             sudo modprobe -a kvm
-             sudo modprobe -a kvm_amd
-      - run: make -C test/e2e test
+      - name: KVM setup
+        run: |
+          VIRTUALIZATION_SUPPORT=$(grep -E -q 'vmx|svm' /proc/cpuinfo && echo yes || echo no)
+          echo ${VIRTUALIZATION_SUPPORT}
+          if [ "${VIRTUALIZATION_SUPPORT}" != "yes" ]; then
+            echo "CPU does not support the virtualization feature."
+            exit 1
+          fi
+          sudo apt-get update
+          sudo apt-get install -y qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+          kvm-ok
+          sudo adduser `id -un` libvirt
+          sudo adduser `id -un` kvm
+          virsh list --all
+          sudo ls -la /var/run/libvirt/libvirt-sock
+          sudo chmod 777 /var/run/libvirt/libvirt-sock
+          sudo ls -la /var/run/libvirt/libvirt-sock
+          ls -l /dev/kvm
+          sudo rmmod kvm_amd
+          sudo rmmod kvm
+          sudo modprobe -a kvm
+          sudo modprobe -a kvm_amd
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push Docker image with cache
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          tags: controller:latest
+          load: true
+          cache-from: type=gha,scope=${{ github.ref_name }}
+          cache-to: type=gha,mode=max,scope=${{ github.ref_name }}
+
+      - name: Setup minikube with kvm2 driver
+        run: |
+            make -C test/e2e launch-minikube
+
+      - name: Load image into minikube
+        run: |
+            make -C test/e2e image-tar-load
+
+      - name: Launch rook-ceph and deploy components
+        run: |
+          make -C test/e2e launch-rook-ceph
+          make -C test/e2e setup-fin-volume
+          make -C test/e2e setup-components
+
+      - name: Run e2e tests
+        run: |
+          make -C test/e2e do-test
