--- a/config/rbac/job.yaml
+++ b/config/rbac/job.yaml
@@ -4,6 +4,12 @@ metadata:
   name: backup-job
   namespace: rook-ceph
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: deletion-job
+  namespace: rook-ceph
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -18,6 +24,30 @@ rules:
   verbs:
   - "get"
   - "list"
+- apiGroups:
+  - "fin.cybozu.io"
+  resources:
+  - "finbackups"
+  verbs:
+  - "get"
+  - "list"
+  - "patch"
+  - "update"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: deletion-job
+  namespace: rook-ceph
+rules:
+- apiGroups:
+  - "fin.cybozu.io"
+  resources:
+  - "finbackups"
+  verbs:
+  - "get"
+  - "list"
+  - "patch"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -31,4 +61,18 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: backup-job
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: deletion-job
+  namespace: rook-ceph
+subjects:
+- kind: ServiceAccount
+  name: deletion-job
+  namespace: rook-ceph
+roleRef:
+  kind: ClusterRole
+  name: deletion-job
   apiGroup: rbac.authorization.k8s.io
