--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -46,10 +46,13 @@ jobs:
           sudo chmod 777 /var/run/libvirt/libvirt-sock
           sudo ls -la /var/run/libvirt/libvirt-sock
           ls -l /dev/kvm
-          sudo rmmod kvm_amd
-          sudo rmmod kvm
+          lsmod | grep kvm
+          sudo rmmod -f kvm_amd
+          sudo rmmod -f kvm
           sudo modprobe -a kvm
           sudo modprobe -a kvm_amd
+          lsmod | grep kvm
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push Docker image with cache
