e2e: remove dotnet directory to free up disk space
At the time of this commit, removing the dotnet directory reduced the root
filesystem usage from 56G to 53G.
Before:
    Filesystem      Size  Used Avail Use% Mounted on
    /dev/root        73G   56G   17G  78% /
After:
    Filesystem      Size  Used Avail Use% Mounted on
    /dev/root        73G   53G   20G  73% /

Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,6 +21,13 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
+
+      - name: Free up disk space
+        run: |
+          df -h /
+          sudo rm -rf /usr/share/dotnet
+          df -h /
+
       - name: KVM setup
         run: |
           VIRTUALIZATION_SUPPORT=$(grep -E -q 'vmx|svm' /proc/cpuinfo && echo yes || echo no)
