add validating webhook to reject deletion of incremental backups
Introduce a new validating webhook that denies deletion requests
for backups that are not full (i.e. incremental backups). This
prevents users from accidentally deleting incremental backups,
which could compromise backup consistency.

Signed-off-by: Kohya Shiozaki <kouyan120706@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -29,6 +29,12 @@ linters:
       - linters:
           - lll
         path: "test/e2e/util.go"
+      - linters:
+          - lll
+        path: "cmd/controller.go"
+      - linters:
+          - lll
+        path: "internal/webhook/.*"
 formatters:
   enable:
     - gofmt
