--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Free up disk space
         run: |
           df -h /
-          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/share/dotnet /usr/local/.ghcup
           df -h /
 
       - name: KVM setup
