--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,7 +21,7 @@ jobs:
         label-filter:
           - full-backup
           - incremental-backup
-          - verification
+          - misc
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
