e2e: make minikube cluster multi node
Make minikube cluster multi node for upcoming multi node tests.

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -65,6 +65,7 @@ launch-minikube: $(MINIKUBE_BIN) $(KUBECTL)
 		$(MINIKUBE) start \
 			--kubernetes-version="v$(KUBERNETES_VERSION)" \
 			--driver=kvm2 \
+			--nodes=2 \
 			--memory 6g \
 			--cpus=2; \
 	fi
