--- a/test/e2e/testdata/fin-volume.yaml
+++ b/test/e2e/testdata/fin-volume.yaml
@@ -1,3 +1,5 @@
+# fin volume for e2e test
+# Their names should be fin-<node name>
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -10,6 +12,14 @@ spec:
     - ReadWriteOnce
   storageClassName: ""
   persistentVolumeReclaimPolicy: Retain
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - fin-test
   hostPath:
     path: /fin
     type: Directory
@@ -27,3 +37,40 @@ spec:
     requests:
       storage: 200Mi
   volumeName: fin-fin-test
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: fin-fin-test-m02
+spec:
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  persistentVolumeReclaimPolicy: Retain
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - fin-test-m02
+  hostPath:
+    path: /fin
+    type: Directory
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: fin-fin-test-m02
+  namespace: rook-ceph
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 200Mi
+  volumeName: fin-fin-test-m02
