--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -10,7 +10,7 @@ MINIKUBE_BIN := $(BINDIR)/minikube-$(MINIKUBE_VERSION)
 MINIKUBE := $(MINIKUBE_BIN) --profile=$(MINIKUBE_PROFILE_NAME)
 KUBECTL := $(BINDIR)/kubectl-$(KUBERNETES_VERSION)
 HELM := $(BINDIR)/helm-$(HELM_VERSION)
-MINIKUBE_HOME := $(BINDIR)
+MINIKUBE_HOME ?= $(BINDIR)
 NS := rook-ceph
 LOOP_FILE := loop.img
 LOOP_DEV := /dev/loop0
