introduce backupStartTime status field instead of BackupInProgress condition
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/config/crd/bases/fin.cybozu.io_finbackups.yaml
+++ b/config/crd/bases/fin.cybozu.io_finbackups.yaml
@@ -73,6 +73,11 @@ spec:
           status:
             description: FinBackupStatus defines the observed state of FinBackup
             properties:
+              backupStartTime:
+                description: '''backupStartTime'' specifies the timestamp of when
+                  the backup started'
+                format: date-time
+                type: string
               conditions:
                 description: '''conditions'' specifies current backup conditions'
                 items:
