add containerPort for metrics to fin-controller
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -67,6 +67,9 @@ spec:
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
+        ports:
+        - name: metrics
+          containerPort: 8080
         env:
         - name: POD_NAMESPACE
           valueFrom:
