feat: integrate checksum-verification job into controllers
Integrate the job that detects data corruption via checksum verification into
the controller. Apply minor fixes to keep existing tests passing. New tests
will be added in the next commit.

Signed-off-by: Kohya Shiozaki <kouyan120706@gmail.com>

--- a/config/crd/bases/fin.cybozu.io_finrestores.yaml
+++ b/config/crd/bases/fin.cybozu.io_finrestores.yaml
@@ -49,6 +49,13 @@ spec:
           spec:
             description: FinRestoreSpec defines the desired state of FinRestore
             properties:
+              allowChecksumMismatched:
+                description: '''allowChecksumMismatched'' specifies whether to allow
+                  restore from a checksum-mismatched backup'
+                type: boolean
+                x-kubernetes-validations:
+                - message: allowChecksumMismatched is immutable
+                  rule: self == oldSelf
               allowUnverified:
                 description: '''allowUnverified'' specifies whether to allow restore
                   from an unverified backup'
