e2e: add rbac-related manifests for handling fbc correctly
- Added RBAC-related manifests for handling fbc correctly
- Remove namespace fields from ClusterRole{,Binding}

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -81,6 +81,8 @@ spec:
           value: 30Mi
         - name: RAW_IMAGE_CHUNK_SIZE
           value: 4Mi
+        - name: CREATE_FINBACKUP_JOB_SERVICE_ACCOUNT
+          value: fin-create-backup-job
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
